# Meal_Plan_API

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
meal_app/: manage.py  settings.py
meal_app/meal_app/: urls.py  wsgi.py
